@@ -1914,12 +1914,7 @@ balsa_window_new()
 
 #ifdef BALSA_USE_THREADS
     /* set initial state of Get-New-Mail button */
-    if (pthread_mutex_trylock(&checking_mail_lock))
-        bw_set_sensitive(window, "GetNewMail", FALSE);
-    else {
-        bw_set_sensitive(window, "GetNewMail", TRUE);
-        pthread_mutex_unlock(&checking_mail_lock);
-    }
+    bw_set_sensitive(window, "GetNewMail", !checking_mail);
 #endif
 
     bw_set_visible(window, "MailboxTabMenu", FALSE);
@@ -2924,17 +2919,22 @@ check_new_messages_real(BalsaWindow * window, int type)
 #ifdef BALSA_USE_THREADS
     struct check_messages_thread_info *info;
     /*  Only Run once -- If already checking mail, return.  */
-    if (pthread_mutex_trylock(&checking_mail_lock)) {
+     pthread_mutex_lock(&checking_mail_lock);
+     if (checking_mail) {
+         pthread_mutex_unlock(&checking_mail_lock);
         fprintf(stderr, "Already Checking Mail!\n");
 	if (progress_dialog)
 	    gtk_window_present(GTK_WINDOW(progress_dialog));
         return;
     }
+    checking_mail = 1;
     if (window)
         bw_set_sensitive(window, "GetNewMail", FALSE);
 
     quiet_check = (type == TYPE_CALLBACK) 
         ? 0 : balsa_app.quiet_background_check;
+
+    pthread_mutex_unlock(&checking_mail_lock);
 
     if (type == TYPE_CALLBACK && 
         (balsa_app.pwindow_option == WHILERETR ||
@@ -3108,6 +3108,7 @@ bw_check_messages_thread(struct check_messages_thread_info *info)
     /*  
      *  It is assumed that this will always be called as a pthread,
      *  and that the calling procedure will check for an existing lock
+     *  and set checking_mail to true before calling.
      */
     MailThreadMessage *threadmessage;
     GSList *list = info->list;
@@ -3124,7 +3125,8 @@ bw_check_messages_thread(struct check_messages_thread_info *info)
     MSGMAILTHREAD(threadmessage, LIBBALSA_NTFY_FINISHED, NULL, "Finished",
                   0, 0);
     
-    pthread_mutex_unlock(&checking_mail_lock);
+    pthread_mutex_lock(&checking_mail_lock);
+    checking_mail = 0;
 
     if (info->window) {
         gdk_threads_enter();
@@ -3132,6 +3134,7 @@ bw_check_messages_thread(struct check_messages_thread_info *info)
         g_object_unref(info->window);
         gdk_threads_leave();
     }
+    pthread_mutex_unlock(&checking_mail_lock);
     
     g_free(info);
     pthread_exit(0);
