@@ -1,3 +1,10 @@
+2011-09-09  Peter Bloomfield  <peter@t43.bellsouth.net>
+
+	* src/main-window.c: use checking_mail_lock to protect access to
+	checking_mail.
+	* src/main.c (balsa_cleanup): ditto.
+	* src/threads.h: declare checking_mail.
+
 2011-09-01  Peter Bloomfield
 
 	* libbalsa/misc.c (lb_text_attr): add gssize len argument;
